k8s/Kubernetes Networking/Ingress/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: pod-network-lab
spec:
  type: ClusterIP

  selector:
    app: catalog-backend

  ports:
  - protocol: TCP
    port: 8081
    targetPort: 80
