k8s/Kubernetes Networking/Ingress/ingress-basic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pod-network-ingress
  namespace: pod-network-lab

spec:
  ingressClassName: traefik

  rules:
  - host: demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pod-network-server
            port:
              number: 8080
