k8s/Kubernetes Networking/Ingress/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: pod-network-ingress-tls
  namespace: pod-network-lab

  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"

spec:
  ingressClassName: traefik

  tls:
  - hosts:
    - demo.local
    secretName: demo-local-tls

  rules:
  - host: demo.local
    http:
      paths:

      - path: /catalog
        pathType: Prefix
        backend:
          service:
            name: catalog-service
            port:
              number: 8081

      - path: /
        pathType: Prefix
        backend:
          service:
            name: pod-network-server
            port:
              number: 8080
