k8s/Kubernetes Networking/Ingress/realestate-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realestate-ingress
spec:
  ingressClassName: nginx

  rules:
  - host: api.example.com
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8001

      - path: /properties
        pathType: Prefix
        backend:
          service:
            name: property-service
            port:
              number: 8002
